--- a/.github/workflows/images.yaml
+++ b/.github/workflows/images.yaml
@@ -49,6 +49,5 @@ jobs:
             BUILDKIT_INLINE_CACHE=1
           push: true
           cache-from: |
-            type=registry,ref=nubots/nubots:pull-request-${{ github.event.number }}
-            type=registry,ref=nubots/nubots:generic
+            type=registry,ref=nubots/nubots:${{ matrix.platform }}
             type=inline
