--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -5,11 +5,11 @@ env:
   DOCKER_BUILDKIT: 1
 
 steps:
-  # Push up new images to DockerHub when they get to master
+  # Push up new images to DockerHub when they get to main
   # Makes development faster as you can just pull the images rather than building them yourself
-  # If you make modifications to the Dockerfile it should resume from the common point in master
+  # If you make modifications to the Dockerfile it should resume from the common point in main
   - label: "Push generic :docker: image"
-    branches: master
+    branches: main
     agents:
       dockerhub: true
     plugins:
@@ -22,7 +22,7 @@ steps:
             - generic:nubots/nubots:generic
 
   - label: "Push nuc7i7bnh :docker: image"
-    branches: master
+    branches: main
     agents:
       dockerhub: true
     plugins:
@@ -35,7 +35,7 @@ steps:
             - nuc7i7bnh:nubots/nubots:nuc7i7bnh
 
   - label: "Push nuc8i7beh :docker: image"
-    branches: master
+    branches: main
     agents:
       dockerhub: true
     plugins:
