Fixed mistakes in voice2json files.

--- a/docker/voice2json/sentences.ini
+++ b/docker/voice2json/sentences.ini
@@ -138,16 +138,10 @@ object   = ($object) | bowl | cloth | tray
 [FindPeople]
 Tell me the <Defs.state>{state} of the person at the ($beacon)
 Tell me the <Defs.state>{state} of the person in the ($room)
-tell me how many people in the ($room) are (<Defs.pgenderp> | <Defs.pose>)
+Tell me how many people in the ($room) are (<Defs.pgenderp> | <Defs.pose>)
 <Defs.talk> to <Defs.whowhere>
 fndppl   = <findp> in the ($room) and <talk>
 fndppl   = <goroom> <findp> and <talk>
-
-
-[FindPeople]
-Tell me the <Defs.state>{attribute} of the person at the ($beacon)
-Tell me the <Defs.state>{attribute} of the person in the ($room)
-Tell me how many people in the ($room) are (<Defs.pgenderp> | <Defs.pose>){attribute2}
 
 [Follow]
 #{void meta: Follow {name 1} to the {room 2}}
@@ -172,7 +166,7 @@ meet <inguidewho> and <Defs.vbguide> ($pron)
 <Defs.gobeacon> meet <inguidewho> and <Defs.vbguide> ($pron)
 
 # meta: {name 1} must be taken from {beacon 1} to {beacon 2}, but he will get lost before reaching it
-inguidewho = ($name) 
+inguidewho = ($name)
 
 [PartyHost]
 phpeople    = everyone | (all the (people | men | women | guests | elders | children))
