--- a/nusight2/docker-compose.yml
+++ b/nusight2/docker-compose.yml
@@ -3,9 +3,9 @@ services:
   nusight:
     image: node:14
     volumes:
-      - .:/var/www/NUsight2
-      - node_modules_volume:/var/www/NUsight2/node_modules
-    working_dir: /var/www/NUsight2
+      - ../:/var/www/NUbots
+      - node_modules_volume:/var/www/NUbots/nusight2/node_modules
+    working_dir: /var/www/NUbots/nusight2
 networks:
   default:
     external:
