--- a/module/support/optimisation/NSGA2Optimiser/data/config/NSGA2Optimiser.yaml
+++ b/module/support/optimisation/NSGA2Optimiser/data/config/NSGA2Optimiser.yaml
@@ -2,19 +2,21 @@ population_size: 60
 max_generations: 200
 num_objectives: 2
 num_constraints: 2
-num_real_vars: 12
 seed: 7777777
 trial_duration_limit: 40 # number of seconds to run a single trial for
 probabilities:
   real:
-    # Note that SBX does something like mutation as well
+    # Note that simulated binary crossover (SBX) does something like mutation as well
     crossover: 0.9
     # recommended nsga2 mutation probability is 1/n, where n is number of parameters
+    mutation: 0.083
+  binary:
+    crossover: 0.9
     mutation: 0.083
 eta:
   # eta_c is distribution index for simulated binary crossover (SBX)
   # higher values of eta_c makes children more similar to parents
-  # Recommended nsga2 value is 20
+  # Recommended nsga2 value for eta_c is 20
   C: 20
   M: 20
 
