--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -348,9 +348,10 @@ RUN install -d -m 0777 /home/nubots/build
 FROM base AS openfst
 
 WORKDIR /home/nubots/openfst
+RUN install-package python2
 COPY --chown=nubots:nubots PKGBUILD/openfst.sh /home/nubots/openfst/PKGBUILD
 RUN makepkg || true
-RUN test -f openfst-1.7.9-1-x86_64.pkg.tar.zst
+RUN test -f openfst-1.7.2-1-x86_64.pkg.tar.zst
 
 FROM base AS kaldi-openfst
 
@@ -363,61 +364,55 @@ RUN test -f kaldi-openfst-1.7.2-2-x86_64.pkg.tar.zst
 FROM base AS kaldi
 
 WORKDIR /home/nubots/kaldi
-COPY --chown=nubots:nubots PKGBUILD/kaldi.sh /home/nubots/kaldi/PKGBUILD
-COPY --from=kaldi-openfst /home/nubots/kaldi-openfst/kaldi-openfst-1.7.2-2-x86_64.pkg.tar.zst /home/nubots/kaldi/
-RUN sudo pacman -U --noconfirm kaldi-openfst-1.7.2-2-x86_64.pkg.tar.zst
 RUN install-package lapack python2 cblas
+COPY --from=openfst /home/nubots/openfst/openfst-1.7.2-1-x86_64.pkg.tar.zst /home/nubots/kaldi
+RUN sudo pacman -U --noconfirm openfst-1.7.2-1-x86_64.pkg.tar.zst
+COPY --chown=nubots:nubots PKGBUILD/kaldi.sh /home/nubots/kaldi/PKGBUILD
 RUN makepkg || true
 RUN test -f kaldi-5.5.r9195.3b8a97d85-1-x86_64.pkg.tar.zst
 
 FROM base AS ngram
 
 WORKDIR /home/nubots/opengrm-ngram
+COPY --from=openfst /home/nubots/openfst/openfst-1.7.2-1-x86_64.pkg.tar.zst /home/nubots/opengrm-ngram
+RUN sudo pacman -U --noconfirm openfst-1.7.2-1-x86_64.pkg.tar.zst
 COPY --chown=nubots:nubots PKGBUILD/ngram.sh /home/nubots/opengrm-ngram/PKGBUILD
-COPY --from=openfst /home/nubots/openfst/openfst-1.7.9-1-x86_64.pkg.tar.zst /home/nubots/opengrm-ngram
-RUN sudo pacman -U --noconfirm openfst-1.7.9-1-x86_64.pkg.tar.zst
 RUN makepkg || true
-RUN test -f ngram-1.3.11-1-x86_64.pkg.tar.zst
+RUN test -f ngram-1.3.7-1-x86_64.pkg.tar.zst
 
 FROM base AS phonetisaurus
 
-# todo: use PKGBUILD files directly inside of cloning the git repositories.
-RUN git clone https://aur.archlinux.org/python-pybindgen.git /home/nubots/python-pybindgen
 WORKDIR /home/nubots/python-pybindgen
+COPY --chown=nubots:nubots PKGBUILD/python-pybindgen.sh /home/nubots/python-pybindgen/PKGBUILD
 RUN makepkg
 RUN sudo pacman -U --noconfirm python-pybindgen-0.20.1-1-x86_64.pkg.tar.zst
 
-RUN git clone https://aur.archlinux.org/phonetisaurus-git.git /home/nubots/phonetisaurus-git
 WORKDIR /home/nubots/phonetisaurus-git
-COPY --from=openfst /home/nubots/openfst/openfst-1.7.9-1-x86_64.pkg.tar.zst /home/nubots/phonetisaurus-git/
-RUN sudo pacman -U --noconfirm openfst-1.7.9-1-x86_64.pkg.tar.zst
+COPY --chown=nubots:nubots PKGBUILD/phonetisaurus.sh /home/nubots/phonetisaurus-git/PKGBUILD
+COPY --from=openfst /home/nubots/openfst/openfst-1.7.2-1-x86_64.pkg.tar.zst /home/nubots/phonetisaurus-git/
+RUN sudo pacman -U --noconfirm openfst-1.7.2-1-x86_64.pkg.tar.zst
 
-# Set the version number.
-RUN sed -i PKGBUILD -e '/^pkgver/s/=.*$/=r171.23f182f/'
-# Add configuration options to ./configure
-RUN sed -i PKGBUILD -e '30a\\ \t\t--with-openfst-includes=/usr/include/fst \\'
-RUN sed -i PKGBUILD -e '31a\\ \t\t--with-openfst-libs=/usr/lib \\'
 RUN makepkg || true
 RUN test -f phonetisaurus-git-r171.23f182f-1-x86_64.pkg.tar.zst
 
 FROM base
 
 WORKDIR /home/nubots/packages/
-COPY --from=kaldi-openfst       /home/nubots/kaldi-openfst/kaldi-openfst-1.7.2-2-x86_64.pkg.tar.zst /home/nubots/packages/
 COPY --from=kaldi               /home/nubots/kaldi/kaldi-5.5.r9195.3b8a97d85-1-x86_64.pkg.tar.zst /home/nubots/packages/
-COPY --from=openfst             /home/nubots/openfst/openfst-1.7.9-1-x86_64.pkg.tar.zst /home/nubots/packages/
-COPY --from=ngram               /home/nubots/opengrm-ngram/ngram-1.3.11-1-x86_64.pkg.tar.zst /home/nubots/packages/
+COPY --from=openfst             /home/nubots/openfst/openfst-1.7.2-1-x86_64.pkg.tar.zst /home/nubots/packages/
+COPY --from=ngram               /home/nubots/opengrm-ngram/ngram-1.3.7-1-x86_64.pkg.tar.zst /home/nubots/packages/
 COPY --from=phonetisaurus       /home/nubots/python-pybindgen/python-pybindgen-0.20.1-1-x86_64.pkg.tar.zst /home/nubots/packages/
 COPY --from=phonetisaurus       /home/nubots/phonetisaurus-git/phonetisaurus-git-r171.23f182f-1-x86_64.pkg.tar.zst /home/nubots/packages/
 
 WORKDIR /home/nubots/packages
 RUN sudo pacman -U --noconfirm \
-    kaldi-openfst-1.7.2-2-x86_64.pkg.tar.zst \
     kaldi-5.5.r9195.3b8a97d85-1-x86_64.pkg.tar.zst \
-    openfst-1.7.9-1-x86_64.pkg.tar.zst \
-    ngram-1.3.11-1-x86_64.pkg.tar.zst \
+    openfst-1.7.2-1-x86_64.pkg.tar.zst \
+    ngram-1.3.7-1-x86_64.pkg.tar.zst \
     python-pybindgen-0.20.1-1-x86_64.pkg.tar.zst \
     phonetisaurus-git-r171.23f182f-1-x86_64.pkg.tar.zst
+
+RUN rm -r /home/nubots/packages
 
 # voice2json
 RUN install-package python-wheel swig alsa-lib jack portaudio sox gcc-fortran jq espeak
