Adds yoshi's suggestion .github/workflows/dockerhub-cleanup.yaml
Co-authored-by: Yosiah de Koeyer <47013245+Y0sh1dk@users.noreply.github.com>

--- a/.github/workflows/dockerhub-cleanup.yaml
+++ b/.github/workflows/dockerhub-cleanup.yaml
@@ -19,7 +19,7 @@ jobs:
 
     # We need `jq` for the script, so we run in a container with it installed
     container:
-      image: dwdraju:alpine-curl-jq
+      image: dwdraju/alpine-curl-jq
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
