--- a/.github/workflows/dockerhub-cleanup.yaml
+++ b/.github/workflows/dockerhub-cleanup.yaml
@@ -27,8 +27,8 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v2
 
-      # Run our script which calls the dockerhub API to delete the PR's image
-      - name: Delete DockerHub image
+      # Run our script which calls the dockerhub API to delete the PR's tag
+      - name: Delete DockerHub image tag
         run: |
           DOCKERHUB_USERNAME=${{ secrets.DOCKERHUB_USERNAME }} \
           DOCKERHUB_PASSWORD=${{ secrets.DOCKERHUB_PASSWORD }} \
