--- a/module/support/optimisation/NSGA2Optimiser/data/config/NSGA2Optimiser.yaml
+++ b/module/support/optimisation/NSGA2Optimiser/data/config/NSGA2Optimiser.yaml
@@ -1,4 +1,6 @@
+# Larger population encourages wider search
 population_size: 60
+# More generations encourages deeper search
 max_generations: 200
 num_objectives: 2
 num_constraints: 2
@@ -20,6 +22,8 @@ eta:
   C: 20
   M: 20
 
+task: "walk"
+task_config_path: "config/webots/QuinticWalk.yaml"
 # The following values are setting the initial values and limits for the walk engine parameters.
 # Each param is the tuple [initial value, minimum, maximum]. These values are merged with the
 # values in QuinticWalk.yaml for an individual, and then evaluated with the walk.
@@ -64,15 +68,3 @@ walk:
 # The following values are setting the initial values and limits for the walk engine command.
 walk_command:
   velocity: [0.2, 0.01, 0.51]
-
-gains:
-  legs: 13
-  arms: 13
-
-arms:
-  right_shoulder_pitch: 1.98
-  left_shoulder_pitch: 1.98
-  right_shoulder_roll: -0.176
-  left_shoulder_roll: 0.176
-  right_elbow: -1
-  left_elbow: -1
