Emission, logging and cleanups.
- Emission of ORB tracking via proto message.
- Logging tracking to file for comparison.
- Edits to ORB-SLAM to remove some warnings.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -96,7 +96,9 @@
         "*.proto": "cpp",
         "*.ipp": "cpp",
         "hash_map": "cpp",
-        "hash_set": "cpp"
+        "hash_set": "cpp",
+        "core": "cpp",
+        "filesystem": "cpp"
     },
     "editor.codeActionsOnSave": {
         "source.organizeImports": true
