--- a/module/behaviour/planning/SimpleWalkPathPlanner/data/config/SimpleWalkPathPlanner.yaml
+++ b/module/behaviour/planning/SimpleWalkPathPlanner/data/config/SimpleWalkPathPlanner.yaml
@@ -1,8 +1,20 @@
 log_level: WARN
 
+# general playing tuning values for approaching ball
 forwardSpeed: 0.02
 sideSpeed: 0.01
-turnSpeed : 0.125
+maxTurnSpeed : 0.125
+
+# rotate on the spot tuning values
+rotateSpeedX : -0.04
+rotateSpeedY: 0
+rotateSpeed: 0.2
+
+# walk to ready position tuning values
+walkToReadySpeedX: 0.1
+walkToReadySpeedY: 0
+walkToReadyRotation: 0.2
+
 slow_approach_factor: 0.01
 a: 7
 b: 0
