--- a/module/behaviour/planning/SimpleWalkPathPlanner/data/config/SimpleWalkPathPlanner.yaml
+++ b/module/behaviour/planning/SimpleWalkPathPlanner/data/config/SimpleWalkPathPlanner.yaml
@@ -1,9 +1,10 @@
 log_level: WARN
 
 # general playing tuning values for approaching ball
-forwardSpeed: 0.02
+forwardSpeed: 0.015
 sideSpeed: 0.01
-maxTurnSpeed : 0.125
+maxTurnSpeed : 0.15
+minTurnSpeed : -0.15
 
 # rotate on the spot tuning values
 rotateSpeed: 0.225
