Clean up the foot controller

--- a/module/motion/walk/MovementController/data/config/MovementController.yaml
+++ b/module/motion/walk/MovementController/data/config/MovementController.yaml
@@ -9,6 +9,12 @@ foot:
   well_width: 0.02
   scaling_factor: 100
   integral_steps: 32
+  # Once the distance between the current position and the target position is within the threshold, the next position is the target position
+  translation_threshold: 0.001
+  rotation_threshold: 0.001
+  # The maximum distance the servos can move in one command, to prevent sudden large movements
+  max_translation: 0.01
+  max_rotation: 0.01
 
 # Torso controller config
 torso:
