commented testing code

--- a/.github/workflows/slack.yaml
+++ b/.github/workflows/slack.yaml
@@ -5,11 +5,11 @@ name: Docker Slack Message
 
 # Control when this will run!
 on:
-  #testing on pull request
-  pull_request:
-    branches: [main]
-    paths:
-      - 'docker/**'
+  #testing on pull request, sends a message everytime
+  # pull_request:
+  #   branches: [main]
+  #   paths:
+  #     - 'docker/**'
 
   push:
     branches:
