--- a/nusight2/package.json
+++ b/nusight2/package.json
@@ -19,7 +19,7 @@
     "tscheck": "tsc --project tsconfig.test.json",
     "tscheck:watch": "yarn tsc --project tsconfig.test.json --watch",
     "protobuf": "node build_scripts/generate_messages.js",
-    "postinstall": "yarn protobuf",
+    "postinstall": "patch-package && yarn protobuf",
     "dev": "yarn start:virtual",
     "dev:debug": "ts-node --inspect src/server/dev-server.ts --virtual-robots",
     "storybook": "node conf/storybook/dev.js",
@@ -88,6 +88,7 @@
     "jest-css-modules": "2.1.0",
     "mini-css-extract-plugin": "2.1.0",
     "nodemon": "2.0.12",
+    "patch-package": "6.4.7",
     "postcss": "8.3.5",
     "postcss-import": "14.0.2",
     "postcss-loader": "6.1.1",
