Fix typescript `outDir`

--- a/nusight2/tsconfig.json
+++ b/nusight2/tsconfig.json
@@ -13,7 +13,7 @@
     "declaration": false,
     "removeComments": true,
     "strict": true,
-    "outDir": "build",
+    "outDir": "dist",
     "lib": [
       "ESNext",
       "dom",
