Remove verbose comments and clarify pacman.latest.config file

--- a/docker/etc/pacman/pacman.latest.conf
+++ b/docker/etc/pacman/pacman.latest.conf
@@ -1,23 +1,27 @@
+#
+# /etc/pacman.latest.conf
+#
+# See the pacman.conf(5) manpage for option and repository directives.
+#
 # Alternative pacman config file which downloads from the latest version of archlinux.
-# You probably *should not* use this file.
+# You probably *should not* use this file to install packages because doing so could
+# cause all packages on the system to be upgraded.
 
-# These were taken from the existing pacman.conf file.
+[core]
+# Intentionally use the latest mirror list so that we can pick up the latest public keys
+# from the core arch linux maintainers.
+Server=https://archive.archlinux.org/repos/last/$repo/os/$arch
+
+# Everything below here is taken from the existing pacman.conf file.
 [options]
 HoldPkg     = pacman glibc
 Architecture = auto
+
+# Specify trust levels.
 SigLevel    = Required DatabaseOptional
 LocalFileSigLevel = Optional
 
-# These file references are important.
-[core]
-Include = /etc/pacman.d/mirrorlist.latest
-[extra]
-Include = /etc/pacman.d/mirrorlist.latest
-[community]
-Include = /etc/pacman.d/mirrorlist.latest
-
-# These were taken from the existing pacman.conf file.
-[options]
+# Ignore various files that bloat the docker image.
 NoExtract  = usr/share/help/* !usr/share/help/en*
 NoExtract  = usr/share/gtk-doc/html/* usr/share/doc/*
 NoExtract  = usr/share/locale/* usr/share/X11/locale/* usr/share/i18n/*
