Build stages in the Dockerfile using parallel jobs.
The Dockerfile has been split into multiple stages:
- `llvm`
- `intel-graphics-compiler-and-compute-runtime`
- `openblas`
- `other-dependencies`
- `final-image`

The last one, `final-image` is the name of the stage which copies all
the files together from the other stages and produces a working
container. Images are cached on hub.docker.com.

Note: Reusable workflows are locked to a particular commit instead of
HEAD, this is a bug in github workflows and will most likely be fixed
soon.

--- a/.github/workflows/dockerhub-cleanup.yaml
+++ b/.github/workflows/dockerhub-cleanup.yaml
@@ -32,5 +32,33 @@ jobs:
         run: |
           DOCKERHUB_USERNAME=${{ secrets.DOCKERHUB_USERNAME }} \
           DOCKERHUB_PASSWORD=${{ secrets.DOCKERHUB_PASSWORD }} \
-          TAG=pull-request-${{ github.event.number }} \
+          TAG=pull-request-${{ github.event.number }}-llvm \
+          .github/workflows/scripts/remove_dockerhub_tag.sh
+
+      - name: Delete DockerHub image tag
+        run: |
+          DOCKERHUB_USERNAME=${{ secrets.DOCKERHUB_USERNAME }} \
+          DOCKERHUB_PASSWORD=${{ secrets.DOCKERHUB_PASSWORD }} \
+          TAG=pull-request-${{ github.event.number }}-intel-graphics-compiler-and-compute-runtime \
+          .github/workflows/scripts/remove_dockerhub_tag.sh
+
+      - name: Delete DockerHub image tag
+        run: |
+          DOCKERHUB_USERNAME=${{ secrets.DOCKERHUB_USERNAME }} \
+          DOCKERHUB_PASSWORD=${{ secrets.DOCKERHUB_PASSWORD }} \
+          TAG=pull-request-${{ github.event.number }}-openblas \
+          .github/workflows/scripts/remove_dockerhub_tag.sh
+
+      - name: Delete DockerHub image tag
+        run: |
+          DOCKERHUB_USERNAME=${{ secrets.DOCKERHUB_USERNAME }} \
+          DOCKERHUB_PASSWORD=${{ secrets.DOCKERHUB_PASSWORD }} \
+          TAG=pull-request-${{ github.event.number }}-other-dependencies \
+          .github/workflows/scripts/remove_dockerhub_tag.sh
+
+      - name: Delete DockerHub image tag
+        run: |
+          DOCKERHUB_USERNAME=${{ secrets.DOCKERHUB_USERNAME }} \
+          DOCKERHUB_PASSWORD=${{ secrets.DOCKERHUB_PASSWORD }} \
+          TAG=pull-request-${{ github.event.number }}-final-image \
           .github/workflows/scripts/remove_dockerhub_tag.sh
