--- a/.github/workflows/nubots.yaml
+++ b/.github/workflows/nubots.yaml
@@ -3,65 +3,103 @@ name: NUbots CI
 
 # Controls when the action will run.
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
-  push:
-    branches: [main]
   # Triggers on PRs to any branch
   pull_request:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # Build the docker image
+  # Declare a new job.
+  build_llvm:
+    name: "Build LLVM"
+    # Run the reusable workflow located at .github/workflows/build_part_of_image.yaml
+    uses: mrwerdo/nubots/.github/workflows/build_part_of_image.yaml@0ec9ea134529fde7a907e989d220326f3f2780e0
+    # Note: a *specific version* of the workflow is being used.
+    # See here for details about the bug: https://github.community/t/ref-head-in-reusable-workflows/203690/71
+
+    # Declare inputs for reusable workflow.
+    with:
+      # Specify which stage in the Dockerfile is being built (i.e. `FROM ... AS ...`)
+      target: llvm
+      # Use the following images as caches from hub.docker.com.
+      cache_from: |
+        type=registry,ref=mrwerdo/nubots:pull-request-${{ github.event.number }}-llvm
+        type=registry,ref=mrwerdo/nubots:generic
+        type=inline
+    secrets:
+      docker_hub_username: ${{ secrets.DOCKERHUB_USERNAME }}
+      docker_hub_password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+  # Declare another job.
+  build_intel_graphics_compiler_and_compute_runtime:
+    name: "Build Intel Graphics Compiler and Compute Runtime"
+    # Run the reusable workflow.
+    uses: mrwerdo/nubots/.github/workflows/build_part_of_image.yaml@0ec9ea134529fde7a907e989d220326f3f2780e0
+    # Wait for the following jobs to complete.
+    needs: build_llvm
+    # Declare inputs for the reusable workflow.
+    with:
+      target: intel-graphics-compiler-and-compute-runtime
+      # Use the following images as caches from hub.docker.com. Notice how llvm is also listed.
+      cache_from: |
+        type=registry,ref=mrwerdo/nubots:pull-request-${{ github.event.number }}-llvm
+        type=registry,ref=mrwerdo/nubots:pull-request-${{ github.event.number }}-intel-graphics-compiler-and-compute-runtime
+        type=registry,ref=mrwerdo/nubots:generic
+        type=inline
+    secrets:
+      docker_hub_username: ${{ secrets.DOCKERHUB_USERNAME }}
+      docker_hub_password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+  build_openblas:
+    name: "Build OpenBLAS"
+    uses: mrwerdo/nubots/.github/workflows/build_part_of_image.yaml@0ec9ea134529fde7a907e989d220326f3f2780e0
+    with:
+      target: openblas
+      cache_from: |
+        type=registry,ref=mrwerdo/nubots:pull-request-${{ github.event.number }}-openblas
+        type=registry,ref=mrwerdo/nubots:generic
+        type=inline
+    secrets:
+      docker_hub_username: ${{ secrets.DOCKERHUB_USERNAME }}
+      docker_hub_password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+  build_other_dependencies:
+    name: "Build Other Dependencies"
+    uses: mrwerdo/nubots/.github/workflows/build_part_of_image.yaml@0ec9ea134529fde7a907e989d220326f3f2780e0
+    with:
+      target: other-dependencies
+      cache_from: |
+        type=registry,ref=mrwerdo/nubots:pull-request-${{ github.event.number }}-other-dependencies
+        type=registry,ref=mrwerdo/nubots:generic
+        type=inline
+    secrets:
+      docker_hub_username: ${{ secrets.DOCKERHUB_USERNAME }}
+      docker_hub_password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+  # Build the docker image.
   build_docker:
-    name: "Build docker image"
-
-    # The type of runner that the job will run on
-    runs-on: ubuntu-20.04
-
-    # We output the image tag that we create so the other jobs can use it
-    outputs:
-      image: ${{ steps.image_output.outputs.image }}
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Cancels previously running jobs for this workflow
-      - name: Cancel Workflow Action
-        uses: styfle/cancel-workflow-action@0.9.1
-
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: Checkout Code
-        uses: actions/checkout@v2
-
-      # Setup docker buildx
-      - name: 🐳 Set up docker buildx 🐳
-        uses: docker/setup-buildx-action@v1
-
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-
-      # Build the docker image
-      - name: 🐳 Build the docker image 🐳
-        uses: docker/build-push-action@v2.7.0
-        with:
-          pull: true
-          tags: "nubots/nubots:pull-request-${{ github.event.number }}"
-          file: docker/Dockerfile
-          context: docker
-          build-args: |
-            platform=generic
-            BUILDKIT_INLINE_CACHE=1
-          push: true
-          cache-from: |
-            type=registry,ref=nubots/nubots:pull-request-${{ github.event.number }}
-            type=registry,ref=nubots/nubots:generic
-            type=inline
-
-      - id: image_output
-        name: Output the created image
-        run: echo "::set-output name=image::nubots/nubots:pull-request-${{ github.event.number }}"
+    name: "Build Docker Image"
+    uses: mrwerdo/nubots/.github/workflows/build_part_of_image.yaml@0ec9ea134529fde7a907e989d220326f3f2780e0
+    # Wait for previous jobs to finish before building the final image.
+    needs:
+      - build_llvm
+      - build_intel_graphics_compiler_and_compute_runtime
+      - build_openblas
+      - build_other_dependencies
+    with:
+      # Build the final-image stage.
+      target: final-image
+      # Use the following images as caches from hub.docker.com.
+      cache_from: |
+        type=registry,ref=mrwerdo/nubots:pull-request-${{ github.event.number }}-intel-graphics-compiler-and-compute-runtime
+        type=registry,ref=mrwerdo/nubots:pull-request-${{ github.event.number }}-llvm
+        type=registry,ref=mrwerdo/nubots:pull-request-${{ github.event.number }}-openblas
+        type=registry,ref=mrwerdo/nubots:pull-request-${{ github.event.number }}-other-dependencies
+        type=registry,ref=mrwerdo/nubots:pull-request-${{ github.event.number }}-final-image
+        type=registry,ref=mrwerdo/nubots:generic
+        type=inline
+    secrets:
+      docker_hub_username: ${{ secrets.DOCKERHUB_USERNAME }}
+      docker_hub_password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
   # Build the codebase
   build_nubots:
@@ -69,11 +107,13 @@ jobs:
 
     # The type of runner that the job will run on
     runs-on: ubuntu-20.04
+
+    # Wait until the image is built.
     needs: build_docker
 
     # Run on the container we just built
     container:
-      image: "${{ needs.build_docker.outputs.image }}"
+      image: mrwerdo/nubots:pull-request-${{ github.event.number }}-final-image
       options: --user 0:0
 
     # Steps represent a sequence of tasks that will be executed as part of the job
@@ -97,78 +137,3 @@ jobs:
 
       - name: Test the code
         run: ./b tests run
-
-  # Check the code is formatted according to clang-format
-  clang-format:
-    name: "C++/Protobuf Formatting"
-    # The type of runner that the job will run on
-    runs-on: ubuntu-20.04
-    needs: build_docker
-
-    # Run on the container we just built
-    container:
-      image: "${{ needs.build_docker.outputs.image }}"
-      options: --user 0:0
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Cancels previously running jobs for this workflow
-      - name: Cancel Workflow Action
-        uses: styfle/cancel-workflow-action@0.9.1
-
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: Checkout Code
-        uses: actions/checkout@v2
-
-      - name: Check clang-format
-        run: .github/workflows/scripts/validate_clang_format.sh
-
-  # Validate the formatting is correct according to cmake-format
-  cmake-format:
-    name: "CMake Formatting"
-    # The type of runner that the job will run on
-    runs-on: ubuntu-20.04
-    needs: build_docker
-
-    # Run on the container we just built
-    container:
-      image: "${{ needs.build_docker.outputs.image }}"
-      options: --user 0:0
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Cancels previously running jobs for this workflow
-      - name: Cancel Workflow Action
-        uses: styfle/cancel-workflow-action@0.9.1
-
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: Checkout Code
-        uses: actions/checkout@v2
-
-      - name: Check cmake-format
-        run: .github/workflows/scripts/validate_cmake_format.sh
-
-  # Validate the formatting is correct according to isort and black
-  python-format:
-    name: "Python Formatting"
-    # The type of runner that the job will run on
-    runs-on: ubuntu-20.04
-    needs: build_docker
-
-    # Run on the container we just built
-    container:
-      image: "${{ needs.build_docker.outputs.image }}"
-      options: --user 0:0
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Cancels previously running jobs for this workflow
-      - name: Cancel Workflow Action
-        uses: styfle/cancel-workflow-action@0.9.1
-
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: Checkout Code
-        uses: actions/checkout@v2
-
-      - name: Check isort and black
-        run: .github/workflows/scripts/validate_python_format.sh
